--- a/src/main/resources/templates/productGroup/edit.html
+++ b/src/main/resources/templates/productGroup/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://tymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:charset="UTF-8">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
